# giotto-time

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_AUTHORS  CONTRIBUTING.rst  DEED_OF_CONTRIBUTION.rst  GOVERNANCE.rst  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  RELEASE.rst  azure-pipelines.yml  conftest.py  dev-requirements.txt  doc-requirements.txt  requirements.txt  setup.cfg  setup.py
.azure-ci/: docker_scripts.sh
.github/workflows/: build_and_publish.yml  ci.yml  deploy_github_pages.yml
build_tools/azure/: build_and_test_wheel.yml  build_and_test_wheel_linux.yml  build_wheel_job.yml  pytest.yml  test_job.yml
doc/: Makefile  conf.py  docs.rst  index.rst
doc/reference/: causality_tests.rst  feature_creation.rst  index.rst  models.rst
doc/release_notes/: index.rst
doc/roadmap/: index.rst
doc/source/: index.rst
docs/: .nojekyll  Makefile  index.html
examples/: ARIMA documentation.ipynb  CV-drafts.ipynb  Plots_import.ipynb  README.rst  Verification notebook.ipynb  WheatTr.csv  _example.py  arima-tests.ipynb  creating_features-with_gtda.ipynb  hierarchical_model.ipynb  pipeline.ipynb  plots_import_example.ipynb  plots_test.ipynb  plotting_example.ipynb  quick-start.ipynb  quick_start.ipynb  simple_models.ipynb
examples/data/: ^GSPC.csv
examples/topological_features/: Creating features with Giotto-tda.ipynb  spx.csv  util_funcs.py
giottotime/: __init__.py  _version.py  base.py  trial.py
giottotime/CustomTrend_ts/: custom_trend.py
gtime/: __init__.py  _version.py  base.py
(+378 files in other folders)
