[metadata]
description-file = README.rst

[tool:pytest]
addopts =
    --ignore doc
    -ra

    --ignore giottotime/feature_extraction/tests/test_feature_creation.py
    # --ignore giottotime/feature_extraction/tests/test_time_series.py
    --ignore giottotime/utils/hypothesis/tests/
    --ignore giottotime/model_selection/tests/test_splitters.py
    --ignore giottotime/models/time_series_models/tests/test_gar.py