[metadata]
description-file = README.rst

[tool:pytest]
addopts =
    --ignore doc
    -ra

    --ignore giottotime/feature_extraction/topology
    --ignore giottotime/feature_extraction/tests/test_trend_features.py
    --ignore giottotime/feature_generation/tests/test_standard.py
    --ignore giottotime/models/forecasting/tests/test_gar.py
